<resources>
    <string name="app_name">Kat-Alog</string>
    <string name="user_name">Aurelio Killian Lexi Verrill</string>
    <string name="user_email">aurelioklv@gmail.com</string>
    <string name="cat_name">Breed</string>
    <string name="description">Description</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="share_message">"Mrrp. Hooman, where is my food?🐈\n\n%1$s\n%2$s"</string>
    <string name="life_span">Life Span</string>
    <string name="origin">Origin</string>
    <string name="temperament">Temperament</string>
    <string-array name="data_name">
        <item>Abyssinian</item>
        <item>Aegean</item>
        <item>American Bobtail</item>
        <item>American Curl</item>
        <item>American Shorthair</item>
        <item>American Wirehair</item>
        <item>Arabian Mau</item>
        <item>Australian Mist</item>
        <item>Balinese</item>
        <item>Bambino</item>
        <item>Bengal</item>
        <item>Birman</item>
        <item>Bombay</item>
        <item>British Longhair</item>
        <item>British Shorthair</item>
        <item>Burmese</item>
        <item>Burmilla</item>
        <item>California Spangled</item>
        <item>Chantilly-Tiffany</item>
        <item>Chartreux</item>
        <item>Chausie</item>
        <item>Cheetoh</item>
        <item>Colorpoint Shorthair</item>
        <item>Cornish Rex</item>
        <item>Cymric</item>
        <item>Cyprus</item>
        <item>Devon Rex</item>
        <item>Donskoy</item>
        <item>Dragon Li</item>
        <item>Egyptian Mau</item>
        <item>European Burmese</item>
        <item>Exotic Shorthair</item>
        <item>Havana Brown</item>
        <item>Himalayan</item>
        <item>Japanese Bobtail</item>
        <item>Javanese</item>
        <item>Khao Manee</item>
        <item>Korat</item>
        <item>Kurilian</item>
        <item>LaPerm</item>
        <item>Maine Coon</item>
        <item>Malayan</item>
        <item>Manx</item>
        <item>Munchkin</item>
        <item>Nebelung</item>
        <item>Norwegian Forest Cat</item>
        <item>Ocicat</item>
        <item>Oriental</item>
        <item>Persian</item>
        <item>Pixie-bob</item>
        <item>Ragamuffin</item>
        <item>Ragdoll</item>
        <item>Russian Blue</item>
        <item>Savannah</item>
        <item>Scottish Fold</item>
        <item>Selkirk Rex</item>
        <item>Siamese</item>
        <item>Siberian</item>
        <item>Singapura</item>
        <item>Snowshoe</item>
        <item>Somali</item>
        <item>Sphynx</item>
        <item>Tonkinese</item>
        <item>Toyger</item>
        <item>Turkish Angora</item>
        <item>Turkish Van</item>
        <item>York Chocolate</item>
    </string-array>
    <string-array name="data_image_url">
        <item>https://cdn2.thecatapi.com/images/0XYvRd7oD.jpg</item>
        <item>https://cdn2.thecatapi.com/images/ozEvzdVM-.jpg</item>
        <item>https://cdn2.thecatapi.com/images/hBXicehMA.jpg</item>
        <item>https://cdn2.thecatapi.com/images/xnsqonbjW.jpg</item>
        <item>https://cdn2.thecatapi.com/images/JFPROfGtQ.jpg</item>
        <item>https://cdn2.thecatapi.com/images/8D--jCd21.jpg</item>
        <item>https://cdn2.thecatapi.com/images/k71ULYfRr.jpg</item>
        <item>https://cdn2.thecatapi.com/images/_6x-3TiCA.jpg</item>
        <item>https://cdn2.thecatapi.com/images/13MkvUreZ.jpg</item>
        <item>https://cdn2.thecatapi.com/images/5AdhMjeEu.jpg</item>
        <item>https://cdn2.thecatapi.com/images/O3btzLlsO.png</item>
        <item>https://cdn2.thecatapi.com/images/HOrX5gwLS.jpg</item>
        <item>https://cdn2.thecatapi.com/images/5iYq9NmT1.jpg</item>
        <item>https://cdn2.thecatapi.com/images/7isAO4Cav.jpg</item>
        <item>https://cdn2.thecatapi.com/images/s4wQfYoEk.jpg</item>
        <item>https://cdn2.thecatapi.com/images/4lXnnfxac.jpg</item>
        <item>https://cdn2.thecatapi.com/images/jvg3XfEdC.jpg</item>
        <item>https://cdn2.thecatapi.com/images/B1ERTmgph.jpg</item>
        <item>https://cdn2.thecatapi.com/images/TR-5nAd_S.jpg</item>
        <item>https://cdn2.thecatapi.com/images/j6oFGLpRG.jpg</item>
        <item>https://cdn2.thecatapi.com/images/vJ3lEYgXr.jpg</item>
        <item>https://cdn2.thecatapi.com/images/IFXsxmXLm.jpg</item>
        <item>https://cdn2.thecatapi.com/images/oSpqGyUDS.jpg</item>
        <item>https://cdn2.thecatapi.com/images/unX21IBVB.jpg</item>
        <item>https://cdn2.thecatapi.com/images/3dbtapCWM.jpg</item>
        <item>https://cdn2.thecatapi.com/images/tJbzb7FKo.jpg</item>
        <item>https://cdn2.thecatapi.com/images/4RzEwvyzz.png</item>
        <item>https://cdn2.thecatapi.com/images/3KG57GfMW.jpg</item>
        <item>https://cdn2.thecatapi.com/images/BQMSld0A0.jpg</item>
        <item>https://cdn2.thecatapi.com/images/TuSyTkt2n.jpg</item>
        <item>https://cdn2.thecatapi.com/images/null.jpg</item>
        <item>https://cdn2.thecatapi.com/images/YnPrYEmfe.jpg</item>
        <item>https://cdn2.thecatapi.com/images/njK25knLH.jpg</item>
        <item>https://cdn2.thecatapi.com/images/CDhOtM-Ig.jpg</item>
        <item>https://cdn2.thecatapi.com/images/-tm9-znzl.jpg</item>
        <item>https://cdn2.thecatapi.com/images/xoI_EpOKe.jpg</item>
        <item>https://cdn2.thecatapi.com/images/165ok6ESN.jpg</item>
        <item>https://cdn2.thecatapi.com/images/DbwiefiaY.png</item>
        <item>https://cdn2.thecatapi.com/images/NZpO4pU56M.jpg</item>
        <item>https://cdn2.thecatapi.com/images/aKbsEYjSl.jpg</item>
        <item>https://cdn2.thecatapi.com/images/OOD3VXAQn.jpg</item>
        <item>https://cdn2.thecatapi.com/images/null.jpg</item>
        <item>https://cdn2.thecatapi.com/images/fhYh2PDcC.jpg</item>
        <item>https://cdn2.thecatapi.com/images/j5cVSqLer.jpg</item>
        <item>https://cdn2.thecatapi.com/images/OGTWqNNOt.jpg</item>
        <item>https://cdn2.thecatapi.com/images/06dgGmEOV.jpg</item>
        <item>https://cdn2.thecatapi.com/images/JAx-08Y0n.jpg</item>
        <item>https://cdn2.thecatapi.com/images/LutjkZJpH.jpg</item>
        <item>https://cdn2.thecatapi.com/images/-Zfz5z2jK.jpg</item>
        <item>https://cdn2.thecatapi.com/images/z7fJRNeN6.jpg</item>
        <item>https://cdn2.thecatapi.com/images/SMuZx-bFM.jpg</item>
        <item>https://cdn2.thecatapi.com/images/oGefY4YoG.jpg</item>
        <item>https://cdn2.thecatapi.com/images/Rhj-JsTLP.jpg</item>
        <item>https://cdn2.thecatapi.com/images/a8nIYvs6S.jpg</item>
        <item>https://cdn2.thecatapi.com/images/o9t0LDcsa.jpg</item>
        <item>https://cdn2.thecatapi.com/images/II9dOZmrw.jpg</item>
        <item>https://cdn2.thecatapi.com/images/ai6Jps4sx.jpg</item>
        <item>https://cdn2.thecatapi.com/images/3bkZAjRh1.jpg</item>
        <item>https://cdn2.thecatapi.com/images/Qtncp2nRe.jpg</item>
        <item>https://cdn2.thecatapi.com/images/MK-sYESvO.jpg</item>
        <item>https://cdn2.thecatapi.com/images/EPF2ejNS0.jpg</item>
        <item>https://cdn2.thecatapi.com/images/BDb8ZXb1v.jpg</item>
        <item>https://cdn2.thecatapi.com/images/KBroiVNCM.jpg</item>
        <item>https://cdn2.thecatapi.com/images/O3F3_S1XN.jpg</item>
        <item>https://cdn2.thecatapi.com/images/7CGV6WVXq.jpg</item>
        <item>https://cdn2.thecatapi.com/images/sxIXJax6h.jpg</item>
        <item>https://cdn2.thecatapi.com/images/0SxW2SQ_S.jpg</item>
    </string-array>
</resources>