<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_details_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            tools:src="@tools:sample/avatars" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_marginEnd="16dp"
                    android:text="@string/cat_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_details_name"
                    android:layout_weight="1"
                    android:text="@string/cat_name" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_marginEnd="16dp"
                    android:text="@string/description"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_details_description"
                    android:layout_weight="1"
                    android:text="@string/description" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_marginEnd="16dp"
                    android:text="@string/origin"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_details_origin"
                    android:layout_weight="1"
                    android:text="@string/origin" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_marginEnd="16dp"
                    android:text="@string/temperament"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_details_temperament"
                    android:layout_weight="1"
                    android:text="@string/temperament" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_marginEnd="16dp"
                    android:text="@string/life_span"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_details_lifespan"
                    android:layout_weight="1"
                    android:text="@string/life_span" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/action_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/share"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>